crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__question_single_120x40.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(120, 40, tree, ui, now)"
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ Auth                                                                                                                 │"
"│                                                                                                                      │"
"│ Which provider?                                                                                                      │"
"│ ❯ 1. Anthropic                                                                                                       │"
"│      claude models                                                                                                   │"
"│   2. OpenAI                                                                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                                                        │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                                                                   fake-1"
