crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__quick_cycle_120x40.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(120, 40, tree, ui, now)"
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                                                                  │"
"│                                                                                                                      │"
"│   /help for help · /login codex to use a subscription                                                                │"
"│   cwd: /tmp/project                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"                                                                                                                        "
"> have it reviewed                                                                                                      "
"                                                                                                                        "
"⏺ reviewer(review the diff)                                                                                             "
"  ⎿  Running… 3 tools · 1.2k tokens                                                                                     "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                                                        │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"❯ ⏺ project  ⏺ reviewer  #design                                                                                        "
