crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__quiet_notices_120x40.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(120, 40, tree, ui, now)"
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                                                                  │"
"│                                                                                                                      │"
"│   /help for help · /login codex to use a subscription                                                                │"
"│   cwd: /tmp/project                                                                                                  │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"                                                                                                                        "
"> run the tests in the background                                                                                       "
"                                                                                                                        "
"⏺ Started. I will say.                                                                                                  "
"                                                                                                                        "
"⏺ Background job ab12cd34 (`cargo test --workspace`) exited with code 0 after 2m 4s.                                    "
"  ⎿  `BashOutput` with id "ab12cd34" reads what it wrote.                                                               "
"                                                                                                                        "
"⏺ reviewer: Two nits, else fine.                                                                                        "
"                                                                                                                        "
"> mei: look at the deploy?                                                                                              "
"                                                                                                                        "
"                                                                                                                        "
"╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · / for commands · ! for shell                                                                        │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                                                              fake/fake-1"
