crates/bingo-surface-tui/src/snapshots/bingo_surface_tui__screens__reasoning_held_80x24.snap
---
source: crates/bingo-surface-tui/src/screens.rs
expression: "draw_tree(80, 24, tree, ui, now)"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ ✻ Welcome to bingo!                                                          │"
"│                                                                              │"
"│   /help for help · /login codex to use a subscription                        │"
"│   cwd: /tmp/project                                                          │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"> what is in this workspace?                                                    "
"                                                                                "
"✻ Thought for 1s                                                                "
"  ⎿  The plan after that: it says which of the two is allowed to move.          "
"     Only then the code, and only the                                           "
"                                                                                "
"✻ Rummaging… (esc to interrupt · 1s)                                            "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ > ask anything · ⏎ steers · tab queues                                       │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"? for shortcuts                                                      fake/fake-1"
